--- a/public/Blog.css
+++ b/public/Blog.css
@@ -611,6 +611,10 @@ video {
   height: 2.5rem;
 }
 
+.h-64 {
+  height: 16rem;
+}
+
 .h-80 {
   height: 20rem;
 }
@@ -621,6 +625,10 @@ video {
 
 .h-\[25rem\] {
   height: 25rem;
+}
+
+.h-\[30rem\] {
+  height: 30rem;
 }
 
 .h-\[88vh\] {
@@ -645,22 +653,6 @@ video {
   height: max-content;
 }
 
-.h-64 {
-  height: 16rem;
-}
-
-.h-\[80vh\] {
-  height: 80vh;
-}
-
-.h-\[70vh\] {
-  height: 70vh;
-}
-
-.h-\[30rem\] {
-  height: 30rem;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -675,6 +667,10 @@ video {
 
 .w-56 {
   width: 14rem;
+}
+
+.w-64 {
+  width: 16rem;
 }
 
 .w-\[32em\] {
@@ -704,10 +700,6 @@ video {
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.w-64 {
-  width: 16rem;
 }
 
 .cursor-pointer {
@@ -826,6 +818,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
