added form validation

--- a/src/Blog/components/index.css
+++ b/src/Blog/components/index.css
@@ -2,6 +2,6 @@ div[data-placeholder]:empty:before {
   content: attr(data-placeholder);
   color: #999;
 }
-div[data-placeholder]::-webkit-scrollbar {
+div[role]::-webkit-scrollbar {
   display: none;
 }
