infused a message when there is no blog

--- a/public/Blog.css
+++ b/public/Blog.css
@@ -631,10 +631,6 @@ video {
   height: 25rem;
 }
 
-.h-\[30rem\] {
-  height: 30rem;
-}
-
 .h-\[88vh\] {
   height: 88vh;
 }
@@ -655,6 +651,14 @@ video {
 .h-max {
   height: -moz-max-content;
   height: max-content;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
 }
 
 .w-10 {
@@ -838,6 +842,11 @@ video {
      object-fit: cover;
 }
 
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -1000,6 +1009,10 @@ video {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:underline:hover {
+  text-decoration-line: underline;
 }
 
 .hover\:shadow-lg:hover {
