added an entry message if there is no blog on the home page

--- a/public/Blog.css
+++ b/public/Blog.css
@@ -842,6 +842,11 @@ video {
      object-fit: cover;
 }
 
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
