--- a/public/Blog.css
+++ b/public/Blog.css
@@ -656,6 +656,10 @@ video {
   height: 2.5rem;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .h-64 {
   height: 16rem;
 }
@@ -696,6 +700,14 @@ video {
 .h-max {
   height: -moz-max-content;
   height: max-content;
+}
+
+.h-\[79vh\] {
+  height: 79vh;
+}
+
+.h-14 {
+  height: 3.5rem;
 }
 
 .w-10 {
@@ -749,6 +761,14 @@ video {
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .cursor-pointer {
@@ -1026,6 +1046,10 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1036,6 +1060,10 @@ video {
 
 .pt-56 {
   padding-top: 14rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-left {
@@ -1144,6 +1172,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1162,6 +1195,42 @@ video {
 }
 
 .duration-500 {
+  transition-duration: 500ms;
+}
+
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:-bottom-1::before {
+  content: var(--tw-content);
+  bottom: -0.25rem;
+}
+
+.before\:w-\[0px\]::before {
+  content: var(--tw-content);
+  width: 0px;
+}
+
+.before\:w-0::before {
+  content: var(--tw-content);
+  width: 0px;
+}
+
+.before\:border-b-2::before {
+  content: var(--tw-content);
+  border-bottom-width: 2px;
+}
+
+.before\:border-white::before {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.before\:duration-500::before {
+  content: var(--tw-content);
   transition-duration: 500ms;
 }
 
@@ -1206,6 +1275,11 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:before\:w-full:hover::before {
+  content: var(--tw-content);
+  width: 100%;
+}
+
 .group:hover .group-hover\:block {
   display: block;
 }
@@ -1229,6 +1303,10 @@ video {
 
   .mobile\:mb-7 {
     margin-bottom: 1.75rem;
+  }
+
+  .mobile\:mt-20 {
+    margin-top: 5rem;
   }
 
   .mobile\:w-\[58rem\] {
@@ -1333,6 +1411,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:mt-12 {
+    margin-top: 3rem;
+  }
+
   .md\:w-\[33rem\] {
     width: 33rem;
   }
